--- a/clovion_backend/clovion_backend/static/style.css
+++ b/clovion_backend/clovion_backend/static/style.css
@@ -83,4 +83,7 @@ select {
     font-size: 16px;
     margin-top: 5px;
 }
-
+#result-container{
+    text-align: center;
+    color: rgb(0, 0, 0);
+}
